[kots] Add a pre-flight check for `cert-manager`
With https://github.com/gitpod-io/gitpod/pull/8785, We expect users
to install their own `cert-manager` install. This PR adds a new
pre-flight check to verify the existence of the `cert-manager`.

As there is no general way to check for the existence of `cert-manager`,
We check for the `certificates.cert-manager.io` CRD instead.

Signed-off-by: Tarun Pothulapati <tarun@gitpod.io>

--- a/install/kots/manifests/kots-preflight.yaml
+++ b/install/kots/manifests/kots-preflight.yaml
@@ -95,3 +95,10 @@ spec:
               message: The cluster must contain at least 4 cores
           - pass:
               message: There are at least 2 cores in the cluster
+    - customResourceDefinition:
+        customResourceDefinitionName: certificate.cert-manager.io
+        outcomes:
+          - fail:
+              message: Certificate CRD of Cert Manager was not found in the cluster. Please [install `cert-manager`](https://cert-manager.io/docs/installation/) to proceed.
+          - pass:
+              message: Cert Manager is installed and available.
